[FIX] Trade ui: tooltip overflow fix

--- a/src/less/ripple/widgets.less
+++ b/src/less/ripple/widgets.less
@@ -328,6 +328,7 @@
         }
 
         .action {
+          position: static;
           padding-left: 0;
           padding-right: 0;
         }
